[package]
name = "musicmxl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
quick-xml = { version = "^0", features = [ "serialize" ] }
serde = { version = "^1.0.0", features = [ "derive" ] }
serde_repr = "^0.1.7"
strum = "^0.23"
strum_macros = "^0.23"